react and javascript

--- a/React for Begginers/Basic from React/index.html
+++ b/React for Begginers/Basic from React/index.html
@@ -20,8 +20,28 @@
       return <h1>Compre aqui</h1>
     }
 
+    const Compras = () => {
+      const [contador, setContador] = React.useState(0);
+
+      function comprar() {
+        setContador(contador + 1);
+      }
+
+      return (
+        <div>
+          <button onClick={comprar}>Comprar</button>
+          <p>Total: {contador}</p>
+          <p>Preço: R$ {contador * 250}</p>
+        </div>
+      )
+    }
+
     const Button = () => {
-      return <button>Comprar</button>
+      function handleClick(event) {
+        console.log(event.target.innerText);
+      }
+
+      return <button onClick={handleClick}>Comprar</button>
     }
 
     const App = () => {
@@ -33,6 +53,7 @@
           Compre por aqui também
           <Button />
         </div>
+        <Compras />
       </div>
     }
 
